vlib/v/checker/tests/use_empty_map_literal_to_initialize_anon_struct_error.vv
struct AStructName {
	foo  int
	anon struct {
		bar int
	}
}

fn main() {
	s := AStructName{5, {}}
	println(s)
}
